Fixed issues with font being serif on mobile view

--- a/portfolio-website/src/components/Header/Header.scss
+++ b/portfolio-website/src/components/Header/Header.scss
@@ -82,6 +82,7 @@
         padding: 1.5rem 0rem;
         font-size: 1.5rem;
         line-height: 2rem;
+        font-family: Montserrat-Regular, sans-serif;
         //overflow: hidden;
         //max-width: 0.9ch;
 
