--- a/portfolio-website/src/pages/Main/Main.scss
+++ b/portfolio-website/src/pages/Main/Main.scss
@@ -41,7 +41,7 @@
         padding: auto;
 
         @include laptop {
-            width: 80%;
+            width: 90%;
         }
     }
 
