--- a/portfolio-website/src/styles/baseline.scss
+++ b/portfolio-website/src/styles/baseline.scss
@@ -1,5 +1,6 @@
 @import "./partials/breakpoints";
 @import "./partials/mixins";
+@import "./partials/fonts";
 
 html, 
 body {
@@ -16,8 +17,8 @@ h1 {
     //line-height: 2rem;
     font-size: 3rem;
     line-height: 4rem;
-    font-family: "SF Pro Display";
-    font-weight: 900;
+    font-family: Montserrat-Regular, sans-serif;
+    font-weight: 700;
     transition: color 0.3s ease;
     @include theme-aware('color', 'color-text');
 
@@ -33,7 +34,8 @@ h2 {
     //font-size: 1.5rem;
     //line-height: 2rem;
     transition: color 0.3s ease;
-    font-family: "SF Pro Display";
+    font-family: Montserrat-Regular, sans-serif;
+    font-weight: 700;
     @include theme-aware('color', 'color-text');
 
     @include tablet {
@@ -47,7 +49,7 @@ h3 {
     line-height: 1.375rem;
     margin: 0;
     transition: color 0.3s ease;
-    font-family: "SF Pro Display";
+    //font-family: Open-Regular, sans-serif;
     @include theme-aware('color', 'color-text');
 
     @include tablet {
@@ -61,10 +63,7 @@ p {
     //line-height: 1.8rem;
     font-size: 1.15rem;
     line-height: 2.2rem;
-    //font-weight: normal;
-    //font-weight: 500;
     transition: color 0.3s ease;
-    font-family: "SF Pro Text";
     @include theme-aware('color', 'color-paragraph');
 }
 
@@ -72,8 +71,8 @@ h4 {
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: normal;
-    font-family: "SF Pro Display";
     color: rgb(142,142,147);
+    font-family: Open-Regular, sans-serif;
 
     @include tablet {
         font-size: 0.875rem;
@@ -86,7 +85,7 @@ h5 {
     line-height: 1.125rem;
     font-weight: normal;
     text-transform: uppercase;
-    font-family: "SF Pro Display";
+    font-family: Open-Regular, sans-serif;
     color: rgb(142,142,147);
 }
 
@@ -104,7 +103,6 @@ a {
     //font-size: 0.8125rem;
     //line-height: 1.125rem;
     font-weight: normal;
-    font-family: "SF Pro Rounded";
 
     @include tablet {
         font-size: 1.25rem;
@@ -121,5 +119,5 @@ a {
     text-decoration: none;
     margin: 0;
     transition: color 0.3s ease;
-    font-family: "SF Pro Display";
+    font-family: Open-Regular, sans-serif;
 }
